test/instance-checks-5.ktn
def example {a, b}(a -> b) { }
